--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,6 +10,9 @@ when-dead:
 # If enabled, players will pop out particles when getting revived, they can also customize their particles with /particles
 revive-particles: true
 
+# If enabled, players will play fancy animations when getting revived, they can also choose between a few animations with /particles
+revive-animations: true
+
 # If enabled, dead players will be able to get revived, even while they are offline.
 # You can't revive someone offline yet. so don't mess with this.
 offline-revives: false
