--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,10 +7,10 @@ when-dead:
   # If enabled, dead players will have Blindness effect.
   blind: true
 
-# If enabled, players will pop out particles when getting revived, they can also customize their particles with /particles
+# If enabled, players will pop out particles when getting revived, they can also customize their particles with /options
 revive-particles: true
 
-# If enabled, players will play fancy animations when getting revived, they can also choose between a few animations with /particles
+# If enabled, players will play fancy animations when getting revived, they can also choose between a few animations with /options
 revive-animations: true
 
 # If enabled, dead players will be able to get revived, even while they are offline.
