--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,6 @@
+# Enables PlaceHolderAPI expansions. Have fun with %awaken%!
+papi: false
+
 # Effects that will be applied to dead players
 when-dead:
 
