--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -94,9 +94,9 @@
             <version>2.10.1</version>
         </dependency>
         <dependency>
-            <groupId>com.github.efe124</groupId>
+            <groupId>com.github.efekos</groupId>
             <artifactId>Simpler</artifactId>
-            <version>1.5.4</version>
+            <version>1.6.1</version>
         </dependency>
         <dependency>
             <groupId>me.clip</groupId>
